--- a/test/index_out.html
+++ b/test/index_out.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="out/result.css">
+    <link rel="stylesheet" href="out/base.css">
 </head>
 <body>
 <div>合并后：(after sprite:)</div>
 <div class="image1"></div>
 <div class="image2"></div>
-<div class="image3"></div>
 </body>
 </html>
