添加新的错误过滤

--- a/test/index_out.html
+++ b/test/index_out.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="out/base.css">
+    <link rel="stylesheet" href="out/result.css">
 </head>
 <body>
 <div>合并后：(after sprite:)</div>
